# Open-Domain-MedQA

./: .gitignore  IR-ES shards 5.py  IR-ES.py  Readme.md  SparseMethods.py  data_loader.py  data_prep.py  dev_FZ-MedQA.json  docker-compose.yml  elastic_retriever.py  generate_fzxmedqa_dataset.py  medqa_dataset.json  workspace.code-workspace
ZebraODQA/: README.md  pyproject.toml
ZebraODQA/datasets/: FZxMedQADataset.py
ZebraODQA/jesper code/realm/: embedder.py  reader.py
ZebraODQA/jesper code/realm/abstracts/: dataset.py  embedder.py  validation.py
ZebraODQA/jesper code/realm/test/: tester.py
ZebraODQA/model/corpus/: medqa.py
ZebraODQA/zebraodqa/: config_default.yaml  main.py
ZebraODQA/zebraodqa/abstracts/: corpus.py
ZebraODQA/zebraodqa/commands/: finetune.py
ZebraODQA/zebraodqa/console/: test.py
ZebraODQA/zebraodqa/corpus/: medqa.py
ZebraODQA/zebraodqa/dataset/: medqa.py
ZebraODQA/zebraodqa/realm/: realm_reader.py
ZebraODQA/zebraodqa/train/: qa_trainer.py
ZebraODQA_CLI/: .gitignore  README.md  config.yml  pyproject.toml
ZebraODQA_CLI/model/: qatrainer.py
ZebraODQA_CLI/model/abstracts/: corpus.py
ZebraODQA_CLI/notebooks/: LongformQA.ipynb  lfqa_utils.py
ZebraODQA_CLI/notebooks/.ipynb_checkpoints/: LongformQA-checkpoint.ipynb
ZebraODQA_CLI/zebraodqa/commands/: finetune.py  ingest.py
data_clean/dicts/: dev.pickle  test.pickle
notebooks/: andreas_scratchbook.py  starostka_scratchbook.py
utils/: colbert_data_constructor.py  create_faissindex_medqa_corpus.py  es_functions.py  generate_medqa_corpus_100w.py  generate_medqa_dataset.py
(+13 files in other folders)
